Removed .padded class and fixed up alignment of Subscription page

--- a/resources/assets/scss/base.scss
+++ b/resources/assets/scss/base.scss
@@ -225,9 +225,9 @@ p {
 }
 
 // TODO: Remove this.
-.padded {
-  padding: $half-spacing;
-}
+// .padded {
+//   padding: $half-spacing;
+// }
 
 .padding-md {
   padding: $half-spacing;
